--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "beautifulsoup4>=4.12.0",
     "feedparser>=6.0.0",
     "lxml>=4.9.0",
-    "rich>=13.0.0"
+    "rich>=13.0.0",
+    "gunicorn>=23.0.0",
 ]
